; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/scsi/extr_scsi_pt.c_ptinit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/scsi/extr_scsi_pt.c_ptinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AC_FOUND_DEVICE = common dso_local global i32 0, align 4
@ptasync = common dso_local global i32 0, align 4
@CAM_REQ_CMP = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [64 x i8] c"pt: Failed to attach master async callback due to status 0x%x!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ptinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ptinit() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @AC_FOUND_DEVICE, align 4
  %3 = load i32, i32* @ptasync, align 4
  %4 = call i64 @xpt_register_async(i32 %2, i32 %3, i32* null, i32* null)
  store i64 %4, i64* %1, align 8
  %5 = load i64, i64* %1, align 8
  %6 = load i64, i64* @CAM_REQ_CMP, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %0
  %9 = load i64, i64* %1, align 8
  %10 = call i32 @printf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str, i64 0, i64 0), i64 %9)
  br label %11

11:                                               ; preds = %8, %0
  ret void
}

declare dso_local i64 @xpt_register_async(i32, i32, i32*, i32*) #1

declare dso_local i32 @printf(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
